# EventSourcing.Python

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  main.py  pyproject.toml
appending_events_db/: pyproject.toml
appending_events_db/src/appending_events_db/: __init__.py  model.py
appending_events_db/tests/: test_appending_events.py
application_logic_db/: pyproject.toml
application_logic_db/src/application_logic_db/: __init__.py
business_logic/: pyproject.toml
business_logic/src/business_logic/: __init__.py  core.py  event_store.py  model.py  shopping_cart.py
business_logic/tests/: conftest.py  test_business_logic.py
business_logic_tests/: pyproject.toml
business_logic_tests/src/business_logic_tests/: __init__.py
events_definition/: pyproject.toml
events_definition/src/events_definition/: __init__.py  app.py
events_definition/tests/: conftest.py  test_event_definition.py
getting_state_from_events/: pyproject.toml
getting_state_from_events/src/getting_state_from_events/: __init__.py
getting_state_from_events/tests/: conftest.py  test_getting_state_from_events.py
getting_state_from_events_db/: pyproject.toml
getting_state_from_events_db/src/getting_state_from_events_db/: __init__.py  event_store.py  model.py
getting_state_from_events_db/tests/: conftest.py  test_getting_state_from_events_db.py
optimistic_concurrency_db/: pyproject.toml
optimistic_concurrency_db/src/optimistic_concurrency_db/: __init__.py
projections_single_stream/: pyproject.toml
projections_single_stream/src/projections_single_stream/: __init__.py  database.py  event_store.py  model.py
projections_single_stream_idempotency/: pyproject.toml
projections_single_stream_idempotency/src/projections_single_stream_idempotency/: __init__.py
